Unable to change the desktop icon placement method
Hi,
I tried to use the new desktop icons handling in gnome-flashback (3.36.0-2 from Debian) but I was not able to set the icon placement method to "Free", not from the desktop contextual menu or from dconf-editor or with gsettings set org.gnome.gnome-flashback.desktop.icons placement 'free'
.
No matter what I do the setting always falls back to the default value 'auto-arrange-icons'
.