desktop: disable unimplemented placement modes

https://gitlab.gnome.org/GNOME/gnome-flashback/issues/41